2013-07-22  Peter Bloomfield

	* src/toolbar-factory.c (tm_load_model): do not load stale
	options.

2013-07-22  Peter Bloomfield

	* src/main-window.c (bw_set_menus): use installed ui file.
	* ui/Makefile.am: install it.
	* ui/main-window.ui: new file.

2013-07-22  Peter Bloomfield

	Move GAction-toggled callback to application-helpers

	* libbalsa/application-helpers.c (libbalsa_window_get_menu_bar),
	(libbalsa_toggle_activated): install GAction-toggled callback.
	* libbalsa/application-helpers.h: declare it.
	* libbalsa/source-viewer.c: use it.
	* src/main-window.c (bw_set_menus): ditto.

2013-07-22  Peter Bloomfield

	Make main-window a GtkApplicationWindow, and port menus from
	GtkUIManager to GtkBuilder and from GtkAction to GAction

	* src/main-window.c (balsa_window_get_toolbar_model),
	(bw_action_set_boolean), (bw_action_get_boolean),
	(bw_action_set_string), (bw_action_set_enabled),
	(bw_app_action_set_enabled), (bw_actions_set_enabled),
	(toggle_activated), (radio_activated), (bw_show_or_hide_widget),
	(new_message_activated), (new_mbox_activated),
	(new_maildir_activated), (new_mh_activated),
	(new_imap_box_activated), (new_imap_folder_activated),
	(new_imap_subfolder_activated), (address_book_activated),
	(prefs_activated), (help_activated), (about_activated),
	(quit_activated), (continue_activated), (get_new_mail_activated),
	(send_queued_mail_activated), (send_and_receive_mail_activated),
	(page_setup_activated), (print_activated), (copy_activated),
	(select_all_activated), (select_thread_activated),
	(find_activated), (find_next_activated),
	(find_in_message_activated), (filters_activated),
	(export_filters_activated), (expand_all_activated),
	(collapse_all_activated), (zoom_in_activated),
	(zoom_out_activated), (zoom_normal_activated),
	(next_message_activated), (previous_message_activated),
	(next_unread_activated), (next_flagged_activated),
	(reset_filter_activated), (mailbox_select_all_activated),